Explicit font size for excerpt post tools.  This prevents bleeding of tools area with more verbose languages (like German).

--- a/scss-include/font-declarations.scss
+++ b/scss-include/font-declarations.scss
@@ -99,6 +99,7 @@ div.river .query {
 .excerpts-view {
     .post-excerpt {
         .post-tools {
+            font-size: $font_extra_small;
             a.confirm-hide {
                 font-weight: bold;
             }
